--- a/styles.css
+++ b/styles.css
@@ -22,27 +22,16 @@ body {
     justify-content: space-between;
     align-items: center;
 
+    background-color: lightgray;
     width: 60vh;
     margin-bottom: 2.5vh;
+    border-radius: 10px;
 }
 
 #title {
     color: green;
     font-weight: bold;
     font-size: 36px;
-}
-
-#reset_button {
-    padding: 3px 18px;
-    background-color: white;
-    border: 2px solid green;
-    border-radius: 999px;
-}
-
-#reset_button:hover {
-    color: white;
-    background-color: green;
-    transition: 0.5s;
 }
 
 #calc_container {
@@ -60,7 +49,7 @@ body {
 #calc_display {
     background-color: lightgray;
     color: black;
-    font-size: 10vh;
+    font-size: 8vh;
     font-weight: bold;
     
     display: flex;
@@ -69,7 +58,7 @@ body {
     flex: 1 1 0;
 
     padding: 4px;
-    margin-bottom: 5vh;
+    margin-bottom: 2.5vh;
     border-radius: 10px;
 }
 
@@ -79,4 +68,9 @@ body {
 
     width: 60vh;
     height: 60vh;
+}
+
+#grid_container > div > div:hover {
+    background-color: lightgray !important;
+    transition: 0.5s;
 }
